.provarCaches/00D410000011HE0EAM/objects/rstk__insptstep__c.object
<CustomObject>
    <description>insptstep__c</description>
    <fields>
        <fullName>rstk__externalid__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rstk__formula_extid__c</fullName>
        <formula>rstk__insptstep_insptempl__r.rstk__externalid__c + &apos;_&apos; + TEXT(rstk__insptstep_seq__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Formula External Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__formula_name__c</fullName>
        <formula>rstk__insptstep_insptempl__r.Name + &apos;(&apos; +  TEXT(rstk__insptstep_seq__c)  +  &apos;)&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Name Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__insptstep_desc__c</fullName>
        <label>Step Description</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__insptstep_insptempl__c</fullName>
        <label>Inspection Order Template</label>
        <referenceTo>rstk__insptempl__c</referenceTo>
        <relationshipLabel>Inspection Order Template Steps</relationshipLabel>
        <relationshipName>insptstep</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>rstk__insptstep_instructions__c</fullName>
        <label>Instructions</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>rstk__insptstep_seq__c</fullName>
        <label>Step Sequence</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__triggeroptions__c</fullName>
        <label>triggeroptions</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>Inspection Order Template Steps</label>
    <listViews>
        <fullName>rstk__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Inspection Order Template Steps</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>